fixed Factories in plagatean states

--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -384,18 +384,18 @@
  AKH_DEF:0 "Alokhrad"
  AKH_ADJ:0 "Alokhrad"
  
- CZR_fascism:0 "Greater Korolian Empire"
- CZR_fascism_DEF:0 "the Greater Korolian Empire"
- CZR_democratic:0 "Czervoslavia"
- CZR_democratic_DEF:0 "The Czervoslavian Republic"
+ CZR_fascism:0 "Królstowo Korolié"
+ CZR_fascism_DEF:0 "the Królstowo Korolié"
+ CZR_democratic:0 "Kingdom of Cservoslavia"
+ CZR_democratic_DEF:0 "The Kingdom of Cservoslavia"
  CZR_neutrality:1 "Czardom of Czervoslavia"
  CZR_neutrality_DEF:1 "the Czardom of Czervoslavia"
- CZR_communism:0 "Korolian Peoples Union"
- CZR_communism_DEF:0 "the Korolian Peoples Union"
+ CZR_communism:0 "Cservoslavian Peoples Union"
+ CZR_communism_DEF:0 "the Cservoslavian Peoples Union"
  CZR_fascism_ADJ:0 "Korolian"
  CZR_democratic_ADJ:0 "Czervoslavian"
  CZR_neutrality_ADJ:0 "Czervoslavian"
- CZR_communism_ADJ:0 "Korolian"
+ CZR_communism_ADJ:0 "Cservoslavian"
  CZR:0 "Czervoslavia"
  CZR_DEF:0 "Czervoslavia"
  CZR_ADJ:0 "Czervoslavia" 
