--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -6,12 +6,16 @@
  fascism:0 "Imperialist"
  fascism_noun:0 "Imperialism"
  fascism_desc:0 "Imperialist Regime"
- neutrality:0 "Monarchist"
- neutrality_noun:0 "Monarchism"
- neutrality_desc:0 "Monarchist State"
+ neutrality:0 "Autocratic"
+ neutrality_noun:0 "Autocracy"
+ neutrality_desc:0 "Autocratic State"
  democratic:0 "Democratic"
  democratic_noun:0 "Democracy"
  democratic_desc:0 "Democratic Regime"
+ #Neutrality sub ideologies
+ neutrality:0 "Monarchist"
+ neutrality_noun:0 "Monarchism"
+ neutrality_desc:0 "Monarchist State"
  #fascism ideology types
  technocracy:0 "Technocratic"
  technocracy_noun:0 "Technocracy"
@@ -26,13 +30,13 @@
  #Czervoslavia
  CZR_fascism_party:0 "KNF"
  CZR_fascism_party_long:0 "Korolian National Front"
- CZR_fascism_desc:0 "The Korolian National Front serves to unite all korolian people within a realm"
+ CZR_fascism_desc:0 "The Korolian National Front serves to unite all korolian people within a single realm"
  CZR_democratic_party:0 "CDP"
- CZR_democratic_party_long:0 "Czervoslavian Democratic party"
- CZR_neutrality_party:0 "HK"
- CZR_neutrality_party_long:0 "House Korol"
- CZR_communism_party:0 "CPP"
- CZR_communism_party_long:0 "Czervoslavian Peoples Party"
+ CZR_democratic_party_long:0 "Czervoslavian Republican party"
+ CZR_neutrality_party:0 "HKRI"
+ CZR_neutrality_party_long:0 "House Korol Royalist Initiative"
+ CZR_communism_party:0 "CAPP"
+ CZR_communism_party_long:0 "Czervoslavian Agrarianist Peoples Party"
  #Chumon Ito
  CHU_fascism_party:0 "SPLF"
  CHU_fascism_party_long:0 "The Southern Plagatean Liberation Front"
