--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -172,7 +172,7 @@
  STATE_171:0 "Heimdall"
  STATE_172:0 "Usarvark"
  STATE_173:1 "Kurt's Landing"
- STATE_174:0 "something"
+ STATE_174:0 "Hauertwood"
  STATE_175:1 "Staden"
  STATE_176:0 "Arpton"
  STATE_177:0 "Vantros"
@@ -400,7 +400,7 @@
  STATE_399:0 "Mt Elisium"
  STATE_400:1 "Blackthorn Bastion"
  STATE_401:0 "Nyr Tlorn"
- STATE_402:0 "somethingsomething"
+ STATE_402:0 "Ambrose Citadel"
  STATE_403:0 "Heimstadt"
  STATE_404:0 "Alakand"
  STATE_405:0 "Erfrierung"
