Andorn Cores and Ryzan VP Local

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -21,4 +21,16 @@
  VICTORY_POINTS_15806:0 "Vallensburg"
  VICTORY_POINTS_8356:0 "Odessos"
  VICTORY_POINTS_9209:0 "Remenberg"
-
+ ### Ryzan
+ VICTORY_POINTS_3815:0 "Fort Welstone"
+ VICTORY_POINTS_7187:0 "Bjornsull"
+ VICTORY_POINTS_7564:0 "Slimehost"
+ VICTORY_POINTS_1642:0 "Nova Balreska"
+ VICTORY_POINTS_5298:0 "Balreska"
+ VICTORY_POINTS_11173:0 "Vologda"
+ VICTORY_POINTS_10869:0 "Erebor"
+ VICTORY_POINTS_3942:0 "The Carthyan Palace"
+ VICTORY_POINTS_5587:0 "Northern Donklasgrad"
+ VICTORY_POINTS_3355:0 "Southern Donklasgrad"
+## Andorn
+ VICTORY_POINTS_10329:0 "Savras"
