Bardonian VP Revamp

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -34,3 +34,13 @@
  VICTORY_POINTS_3355:0 "Southern Donklasgrad"
 ## Andorn
  VICTORY_POINTS_10329:0 "Savras"
+ ## Bardonia
+ VICTORY_POINTS_7613:0 "Fluenta"
+ VICTORY_POINTS_7487:0 "Lobopolis"
+ VICTORY_POINTS_6742:0 "Nothrosa"
+ VICTORY_POINTS_3504:0 "Ashenford"
+ VICTORY_POINTS_10732:0 "Duckburg"
+ VICTORY_POINTS_7756:0 "Lundres"
+ VICTORY_POINTS_2980:0 "Madman's Fort"
+ VICTORY_POINTS_1826:0 "Novus"
+VICTORY_POINTS_10697:0 "Auron's Peak"
