--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -34,6 +34,8 @@
  VICTORY_POINTS_3355:0 "Southern Donklasgrad"
 ## Andorn
  VICTORY_POINTS_10329:0 "Savras"
+ VICTORY_POINTS_8638:0 "Embrē"
+ VICTORY_POINTS_2585:0 "Goblin Port"
  ## Bardonia
  VICTORY_POINTS_7613:0 "Fluenta"
  VICTORY_POINTS_7487:0 "Lobopolis"
@@ -41,6 +43,19 @@
  VICTORY_POINTS_3504:0 "Ashenford"
  VICTORY_POINTS_10732:0 "Duckburg"
  VICTORY_POINTS_7756:0 "Lundres"
- VICTORY_POINTS_2980:0 "Madman's Fort"
+ VICTORY_POINTS_2980:0 "Madman's Keep"
  VICTORY_POINTS_1826:0 "Novus"
 VICTORY_POINTS_10697:0 "Auron's Peak"
+## Escharia
+VICTORY_POINTS_936:0 "Drakhasrei Estate"
+VICTORY_POINTS_12157:0 "Drakehasport"
+VICTORY_POINTS_12310:0 "Ascension Site"
+VICTORY_POINTS_6717:0 "Goldhain"
+VICTORY_POINTS_10274:0 "Raykara"
+VICTORY_POINTS_811:0 "Baunei Av Kapuno"
+VICTORY_POINTS_7792:0 "Alessandrea"
+VICTORY_POINTS_7663:0 "Midford"
+VICTORY_POINTS_1353:0 "Tel-Et"
+VICTORY_POINTS_12598:0 "Litoci"
+VICTORY_POINTS_4558:0 "Higherkeep"
+VICTORY_POINTS_7978:0 "Asylais"
