--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -695,12 +695,12 @@
  STATE_693:0 "Strol"
  STATE_694:0 "Vivonia"
  STATE_695:0 "Orilin"
- STATE_696:0 "L'Antiqitown"
+ STATE_696:0 "Borednhaven"
  STATE_697:0 "Ashburne"
- STATE_698:0 "Holy Cheesus Temple"
- STATE_699:0 "Annover's Savras"
- STATE_700:0 "Brittle Keep"
- STATE_701:0 "Skogensf Aste"
+ STATE_698:0 "North Richteria"
+ STATE_699:0 "Savras"
+ STATE_700:0 "Areska"
+ STATE_701:0 "West Areska"
  STATE_702:0 "Gobover"
  STATE_703:0 "Hannover"
  STATE_704:0 "Sydefaltet"
@@ -719,14 +719,14 @@
  STATE_717:1 "Ardena"
  STATE_718:1 "Rock Bottom"
  STATE_719:0 "Salmongrad"
- STATE_720:0 "Thelesia"
+ STATE_720:0 "Orbinfell"
  STATE_721:0 "Kendalis"
  STATE_722:0 "Fichtenwaldburg"
  STATE_723:0 "Smithycups"
- STATE_724:0 "Smoxxyville"
- STATE_725:0 "Golb's Palace"
+ STATE_724:0 "West Fichtenwaldburg"
+ STATE_725:0 "Drahalad"
  STATE_726:2 "Arcem"
- STATE_727:0 "Trojzubec"
+ STATE_727:0 "West Nothrook"
  STATE_728:0 "Kazhan"
  STATE_729:0 "Vereblock"
  STATE_730:0 "Tortuga"
