--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -33,7 +33,7 @@
  VICTORY_POINTS_5587:0 "Northern Donklasgrad"
  VICTORY_POINTS_3355:0 "Southern Donklasgrad"
 ## Andorn
- VICTORY_POINTS_10329:0 "Savras"
+ VICTORY_POINTS_6656:0 "Brittle Keep"
  VICTORY_POINTS_8638:0 "Embrē"
  VICTORY_POINTS_2585:0 "Goblin Port"
  ## Bardonia
